# statschat-app

./: .dockerignore  .envrc  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  app_config.toml  codecov.yml  pyproject.toml  requirements.txt
data/bulletins/: EXAMPLE-2015-03-10_child-and-infant-mortality-in-england-and-wales-2013.json  EXAMPLE-2016-02-16_consumer-price-inflation-uk-january-2016.json  EXAMPLE-2016-02-18_adult-smoking-habits-in-great-britain-2014.json  EXAMPLE-2023-05-19_public-opinions-and-social-trends-great-britain-4-to-14-may-2023.json
docs/api/: README.md  search.md
fast-api/: main_api.py
flask-app/: Dockerfile  __init__.py  app.py  deploy_app.sh  requirements.txt
flask-app/templates/: ons_layout.html  statschat.html
notebooks/: load_llm_models_docker.py  searching.py
prompts/: lfqa.yml
static/js/: application.js
static/ons_files/: main.css
static/rating/: rating.js
statschat/: __init__.py  custom_json_convertor.py  handle_meta.py  latest_flag_helpers.py  llm.py  preprocess.py  search.py  utils.py
statschat/_config/: main.py  main.toml
statschat/embedding/: latest_flag_helpers.py  latest_updates.py  preprocess.py  preprocess_update_db.py
statschat/generative/: llm.py  prompts.py  response_model.py  utils.py
statschat/model_evaluation/: evaluation.py  question_configuration.toml
templates/: ons_layout.html  statschat.html
tests/: test_evaluation.py  test_latest_updates.py  test_llm.py  test_preprocess.py  test_search.py
tests/config/: test_eval_config.toml
(+14 files in other folders)
